--- a/Our_Hours/Our_Hours.csproj
+++ b/Our_Hours/Our_Hours.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Our_Hours_Library\Our_Hours_Library.csproj" />
+  </ItemGroup>
+
 </Project>
